force-app/main/default/objects/Interest_Rule__mdt/Interest_Rule__mdt.object-meta.xml
<CustomObject>
    <label>Interest Rule</label>
    <pluralLabel>Interest Rules</pluralLabel>
</CustomObject>