force-app/main/default/objects/Interest_Rule__mdt/fields/Disqualified__c.field-meta.xml
<CustomField>
    <fullName>Disqualified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disqualified?</label>
    <type>Checkbox</type>
</CustomField>