force-app/main/default/objects/Interest_Rule__mdt/fields/Rule_Order__c.field-meta.xml
<CustomField>
    <fullName>Rule_Order__c</fullName>
    <label>Rule Order</label>
    <precision>4</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>